--- a/vista/asset/css/main.css
+++ b/vista/asset/css/main.css
@@ -2,9 +2,7 @@ a {
   margin: 0px;
   padding: 0px;
   color: #060A0F;
-}
-a:hover {
-  color: #FF6500;
+  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -15,7 +13,11 @@ p {
   color: #494949;
 }
 
-.tSlow, .efecto, .boton, .cabezote__menu .menu a:after, .cabezote__menu .menu a:before, .cabezote__menu .menu a, .cabezote__menu .link-active .inicio:after, .cabezote__menu, #cabezote .logo img, #cabezote, a {
+li {
+  list-style: none;
+}
+
+.tSlow, #footer .footer__c #redes .redes .redes__icono .icono, #footer .footer__c #redes .redes .redes__icono, #footer .footer__b .tumblr:hover, .efecto, .boton, .cabezote__menu .menu a:after, .cabezote__menu .menu a:before, .cabezote__menu .menu a, .cabezote__menu .link-active .inicio:after, .cabezote__menu, #cabezote .logo img, #cabezote, a {
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
@@ -177,38 +179,43 @@ p {
 #nosotros {
   position: relative;
   font-size: 16px;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .nosotros {
   text-align: center;
-  margin-bottom: 10rem;
+  margin-bottom: 6rem;
 }
 
 .efecto {
-  width: 250px;
-  height: 250px;
   -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
 .efecto:hover {
   clip-path: polygon(100% 0%, 100% 100%, 0% 100%, 0% 0%);
   -webkit-clip-path: polygon(100% 0%, 100% 100%, 0% 100%, 0% 0%);
+  border-radius: 100%;
 }
-.black {
+.china {
+  width: 100%;
+  height: 90%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.nosotros__b {
+  padding: 200px 20px;
+}
+.nosotros__b .black {
   font-weight: bold;
   font-size: 24px;
 }
-
-.black__b {
+.nosotros__b .black__b {
   font-size: 24px;
+  margin-top: 1rem;
 }
-
-.china {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+.nosotros__b .nosotros__p {
+  margin-top: 1rem;
 }
 
 #capturamos {
@@ -256,42 +263,105 @@ p {
 #footer {
   position: relative;
   font-size: 16px;
-  margin-top: 5rem;
-  height: 400px;
+  margin-top: 8rem;
   background-color: #060A0F;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   -webkit-clip-path: polygon(0% 15%, 50% 0%, 100% 15%, 100% 100%, 0% 100%);
-  clip-path: polygon(0% 15%, 50% 0%, 100% 15%, 100% 100%, 0% 100%);
+          clip-path: polygon(0% 15%, 50% 0%, 100% 15%, 100% 100%, 0% 100%);
 }
-.mapa__p {
+#footer h6 {
+  color: rgba(255, 255, 255, 0.6);
+}
+#footer .li__general {
   padding: 0%;
-  font-size: 80%;
-  font-weight: 400;
-  list-style: none;
-  color: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.4);
 }
-
-.sitio .mapa {
-  color: #494949;
+#footer .footer__a {
   margin-top: 4rem;
-  font-weight: bold;
+  margin-left: 2rem;
 }
-.sitio .linea {
+#footer .footer__a .linea__sitio {
   height: 0.1rem;
   width: 80%;
+  color: rgba(255, 255, 255, 0.3);
 }
-
-.contact {
-  color: #494949;
+#footer .footer__b {
   margin-top: 4rem;
-  font-weight: bold;
+  padding: 0%;
+  cursor: pointer;
 }
-
-.redes {
+#footer .footer__b .tmb2 {
+  margin-top: 0.2rem;
+}
+#footer .footer__b .tumblr {
+  width: 19%;
+  opacity: 0.6;
+}
+#footer .footer__b .tumblr:hover {
+  opacity: 1;
+}
+#footer .footer__c {
+  margin-top: 4rem;
+}
+#footer .footer__c .informacion {
+  margin-left: 2rem;
+}
+#footer .footer__c #redes {
   margin-top: 2rem;
 }
-.redes h6 {
-  color: #494949;
-  font-weight: bold;
+#footer .footer__c #redes .redes {
+  padding: 0%;
+}
+#footer .footer__c #redes .redes .redes__icono {
+  display: inline-block;
+  margin: 0px 7px;
+  position: relative;
+  float: left;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  cursor: pointer;
+}
+#footer .footer__c #redes .redes .redes__icono:hover {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background-color: white;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+#footer .footer__c #redes .redes .redes__icono .icono {
+  font-size: 22px;
+  color: rgba(255, 255, 255, 0.2);
+  -webkit-transform: ratate(0deg) translate(-3px, 3px);
+  transform: ratate(0deg) translate(-3px, 3px);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+#footer .footer__c #redes .redes .redes__icono .icono:hover {
+  color: #060A0F;
+  -webkit-transform: rotate(-45deg) translate(-3px, 3px);
+  transform: rotate(-45deg) translate(-3px, 3px);
+}
+#footer .footer__d {
+  margin-top: 2rem;
+  padding: 0%;
+}
+#footer .footer__d .linea__copy {
+  color: white;
+}
+#footer .footer__d .copy__p {
+  margin-left: 2rem;
+}
+#footer .footer__d .copy__p .bp {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 14px;
+}
+#footer .footer__d .copy__p .bp:hover {
+  color: white;
+  font-size: 16px;
 }
